--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                         <strong>ClashVerse</strong></h1>
                     <p class="mbr-text mbr-fonts-style display-5">
                         Clash of Clans discord bot to get clan and war stats, zapquake combos, next trader item occurrences, and more with in-game like image based responses.</p>
-                    <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-5" href="https://discord.com/oauth2/authorize?client_id=839579942782238800&permissions=2147871808&scope=bot%20applications.commands" target="_blank">&nbsp;Invite the Bot&nbsp;</a>
-                        <a class="btn btn-white-outline display-5" href="https://discord.com/invite/xR2dsYHbRe" target="_blank">&nbsp;Demo Server&nbsp;</a></div>
+                    <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-5" href="https://discord.com/oauth2/authorize?client_id=866733026667003904&permissions=388160&scope=bot%20applications.commands" target="_blank">&nbsp;Invite the Bot&nbsp;</a>
+                        <a class="btn btn-white-outline display-5" href="https://discord.gg/xR2dsYHbRe" target="_blank">&nbsp;Demo Server&nbsp;</a></div>
                 </div>
             </div>
         </div>
