--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="card-box align-center">
                         <span class="mbr-iconfont mobi-mbri-sites mobi-mbri"></span>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                            <strong>400+ Servers</strong></h4>
+                            <strong>450+ Servers</strong></h4>
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                     <div class="card-box align-center">
                         <span class="mbr-iconfont mobi-mbri-users mobi-mbri"></span>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                            <strong>80000+ Users</strong></h4>
+                            <strong>115k+ Users</strong></h4>
                     </div>
                 </div>
             </div>
