--- a/404.html
+++ b/404.html
@@ -1,1 +1,8 @@
-<!doctype html><html lang="en"><head><meta http-equiv="refresh" content="0; url=https://clashverse.github.io"></head></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta http-equiv="refresh" content="0; url=https://clashverse.github.io">
+</head>
+
+</html>
