--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         content="Clash of Clans discord bot to get clan and war stats, zapquake combos, next trader item occurrences, and more with in-game like image based responses.">
 
     <meta name="google-site-verification" content="OKP8VXsxv5yWsIQjXIbjt4yN0H6Fks5_lNpqx3jz7gg" />
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S3FYV8FJ8D"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S3FYV8FJ8D" defer></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
@@ -42,14 +42,16 @@
     </script>
 
     <link rel="stylesheet" href="/index.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
+    <link rel="preload"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+        as="style" onload="this.onload=null;this.rel='stylesheet'">
 </head>
 
 <body>
     <main>
         <section id="top-section">
-            <img id="top-logo" src="/assets/clashverse-logo.png" alt="clashverse bot logo">
+            <img id="top-logo" src="/assets/clashverse-logo.webp" alt="clashverse bot logo">
             <div id="top-text">
                 <p><b>ClashVerse</b></p>
                 <p>Clash of Clans discord bot to get clan and war stats, zapquake combos, next trader item occurrences,
@@ -77,7 +79,7 @@
         </section>
 
         <section class="featurel-section">
-            <img class="featurel-img" src="/assets/super-troops.png" alt="super troops">
+            <img class="featurel-img" src="/assets/super-troops.webp" alt="super troops">
             <div class="featurel-text">
                 <p><b>Super Troops</b></p>
                 <p>Find who among your clan mates have any particular super troop active currently. Just type
@@ -92,11 +94,11 @@
                 <p>Find ZapQuake combos to take down any level hero or defense with the least spell space possible.
                     Higher level clan castle spells and heroes under warden aura supported too.</p>
             </div>
-            <img class="featurer-img" src="/assets/zapquake-combo.png" alt="zapquake combos">
+            <img class="featurer-img" src="/assets/zapquake-combo.webp" alt="zapquake combos">
         </section>
 
         <section class="featurel-section">
-            <img class="featurel-img" src="/assets/trader-cycle.png" alt="trader cycle">
+            <img class="featurel-img" src="/assets/trader-cycle.webp" alt="trader cycle">
             <div class="featurel-text">
                 <p><b>Trader Cycle</b></p>
                 <p>Save your current day trader items once and find the next occurrence of any magic item in your daily
@@ -110,11 +112,11 @@
                 <p>Get the town hall composition of your clan with average heroes, pets, trophies, war stars, attacks,
                     and donations of individual town hall levels.</p>
             </div>
-            <img class="featurer-img" src="/assets/clan-stats.png" alt="clan stats">
+            <img class="featurer-img" src="/assets/clan-stats.webp" alt="clan stats">
         </section>
 
         <section class="featurel-section">
-            <img class="featurel-img" src="/assets/war-score-board.png">
+            <img class="featurel-img" src="/assets/war-score-board.webp">
             <div class="featurel-text">
                 <p><b>War Scoreboard</b></p>
                 <p>Get various stats of an ongoing regular or league war like total stars, destruction, attacks used,
@@ -132,7 +134,7 @@
         </section>
 
         <section class="featurel-section">
-            <img class="featurel-img" src="/assets/much-more.png" alt="clashverse bot invite">
+            <img class="featurel-img" src="/assets/much-more.webp" alt="clashverse bot invite">
             <div class="featurel-text">
                 <p><b>And Much More!</b></p>
                 <p>Create custom embeds with button roles for your server members and meet the friendly villager woman
