--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="refresh" content="0; url=https://clashverse.github.io">
+    <meta http-equiv="refresh" content="0; url=https://clashverse.pages.dev">
 </head>
 
 </html>
