roshan.cyou domain

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <meta property="og:title" content="ClashVerse | Clash of Clans discord bot" />
     <meta name="twitter:title" content="ClashVerse | Clash of Clans discord bot">
 
-    <meta itemprop="image" content="https://clashverse.pages.dev/assets/thumb-card-14-may.jpg" />
-    <meta name="twitter:image" content="https://clashverse.pages.dev/assets/thumb-card-14-may.jpg" />
-    <meta name="twitter:image:src" content="https://clashverse.pages.dev/assets/thumb-card-14-may.jpg">
-    <meta property="og:image" content="https://clashverse.pages.dev/assets/thumb-card-14-may.jpg">
+    <meta itemprop="image" content="https://clashverse.roshan.cyou/assets/thumb-card-14-may.jpg" />
+    <meta name="twitter:image" content="https://clashverse.roshan.cyou/assets/thumb-card-14-may.jpg" />
+    <meta name="twitter:image:src" content="https://clashverse.roshan.cyou/assets/thumb-card-14-may.jpg">
+    <meta property="og:image" content="https://clashverse.roshan.cyou/assets/thumb-card-14-may.jpg">
 
-    <link rel="icon" href="https://clashverse.pages.dev/assets/small-icon.png" />
-    <link rel="apple-touch-icon" href="https://clashverse.pages.dev/assets/small-icon.png" />
-    <link rel="shortcut icon" href="https://clashverse.pages.dev/assets/small-icon.png" type="image/x-icon">
+    <link rel="icon" href="https://clashverse.roshan.cyou/assets/small-icon.png" />
+    <link rel="apple-touch-icon" href="https://clashverse.roshan.cyou/assets/small-icon.png" />
+    <link rel="shortcut icon" href="https://clashverse.roshan.cyou/assets/small-icon.png" type="image/x-icon">
 
     <meta itemprop="description"
         content="Clash of Clans discord bot to get clan and war stats, zapquake combos, next trader item occurrences, and more with in-game like image based responses." />
@@ -33,7 +33,7 @@
     <meta name="description"
         content="Clash of Clans discord bot to get clan and war stats, zapquake combos, next trader item occurrences, and more with in-game like image based responses.">
 
-    <meta http-equiv="refresh" content="0; url=https://clashverse.pages.dev">
+    <meta http-equiv="refresh" content="0; url=https://clashverse.roshan.cyou">
 </head>
 
 </html>
