--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         content="Clash of Clans discord bot to get clan and war stats, zapquake combos, next trader item occurrences, and more with in-game like image based responses.">
 
     <meta http-equiv="refresh" content="0; url=https://clashverse.roshan.cyou">
+    <link rel="canonical" href="https://clashverse.roshan.cyou">
 </head>
 
 </html>
